<resources>
    <string name="ProtectChat" translatable="false">PROTECT chat</string>
    <string name="UnprotectChat" translatable="false">UNPROTECT chat</string>
    <string name="HiThereMessage" translatable="false">Welcome to HiThere: The most discreet Telegram client available!.\n1) LongPress the \"HiThere\" title to enter the configuration.\n2) LongPress the chat you want to Hide 3) LongPress the above Eye Icon to Unhide the chats.\n4) Press the Eye Icon to Hide all the Chats.</string>
    <string name="HiThereConfig" translatable="false">HiThere Settings</string>
    <string name="ChatConfig" translatable="false">Chat protection Settings</string>
    <string name="ChatConfigured" translatable="false">Chat configuration correctly updated</string>
    <string name="AreYouSureProtectThisChat" translatable="false">Are you sure you want to protect this chat?</string>
    <string name="AreYouSureUnprotectThisChat" translatable="false">Enter the password to unprotect the chats</string>
    <string name="AreYouSureUnhideAllChat" translatable="false">Are you sure you want to unhide ALL chats?</string>
    <string name="PasswordDifferent" translatable="false">Chat Passwords are different.\nChat NOT protected!</string>
    <string name="DefaultPasswordDifferent2" translatable="false">Chat default Passwords are different.\nChat default Password not modified</string>
    <string name="MasterPasswordDifferent2" translatable="false">Master Passwords are different.\nMaster Password not modified</string>
    <string name="PasswordEmpty2" translatable="false">Master Password is empty.\nMaster Password not saved</string>
    <string name="PasswordEmpty" translatable="false">Password cannot be empty.\Chat NOT proteceted!</string>
    <string name="ChatHided" translatable="false">Chat protected!</string>
    <string name="ChatUnhided" translatable="false">Chat unprotected!</string>
    <string name="AllChatHided" translatable="false">ALL Chat has been Protected</string>
    <string name="EnterPasswordUnhide" translatable="false">Enter the password to unprotect the Chat</string>
    <string name="ConfigurationSaved" translatable="false">Configuration updated</string>
    <string name="NewConfigurationSaved" translatable="false">Configuration resetted</string>
    <string name="EnableChatHide" translatable="false">Enable HiThere chat protection</string>
    <string name="NotificationTitle" translatable="false">Notif. Title</string>
    <string name="NotificationMessage" translatable="false">Notif. Message</string>
    <string name="ProtectUnknownChats" translatable="false">Protect unknown chats</string>
    <string name="ResetConfiguration" translatable="false">Reset Configuration</string>
    <string name="EnterMasterPassword" translatable="false">enter master password</string>
    <string name="EnterMasterPassword2" translatable="false">Enter the Master Password to configure HiThere</string>
    <string name="RepeatMasterPassword" translatable="false">repeat master password</string>
    <string name="EnterDefaultPassword" translatable="false">Enter the default password used to protect Chats</string>
    <string name="EnterDefaultPasswordMsg" translatable="false">enter default password</string>
    <string name="RepeatDefaultPasswordMsg" translatable="false">repeat default password</string>
    <string name="HowChatsAutoHided" translatable="false">How chats are auto-hided?</string>
    <string name="DefaultNotificationTitleMessage" translatable="false">Enter the default Title and Message to be used when notify Protected chats</string>
    <string name="EnterMasterPasswordMsg" translatable="false">Enter the master password used to modify the configuration and to unhide all the Chats at once</string>
    <string name="EnterPassword" translatable="false">enter password</string>
    <string name="TitleExample" translatable="false">Android</string>
    <string name="MessageExample" translatable="false">Contact list updated!</string>
    <string name="EnableProtectedNotification" translatable="false">Enable the Protected Notification</string>
    <string name="EnterProtectionPassword" translatable="false">Enter the protection password or leave empty to use the Master Password</string>
    <string name="ProtectThisChat" translatable="false">Protect this Chat</string>
    <string name="RepeatPassword" translatable="false">repeat password</string>
    <string name="AppName">HiThere</string>
    <string name="AppNameBeta">HiThere Beta</string>
    <string name="LanguageName">English</string>
    <string name="LanguageNameInEnglish">English</string>
    <string name="LanguageCode">en</string>
    <string name="YourPhone">Your phone</string>
    <string name="StartText">Please confirm your country code and enter your phone number.</string>
    <string name="ChooseCountry">Choose a country</string>
    <string name="WrongCountry">Wrong country code</string>
    <string name="YourCode">Phone verification</string>
    <string name="SentSmsCode">We\'ve sent an SMS with an activation code to your phone <![CDATA[<b>]]>%1$s<![CDATA[</b>]]>.</string>
    <string name="SentAppCode">We\'ve sent the code to the <![CDATA[<b>]]>Telegram<![CDATA[</b>]]> app on your other device.</string>
    <string name="SentCallCode">We\'ve sent an activation call to your phone <![CDATA[<b>]]>%1$s<![CDATA[</b>]]>.\n\nDon\'t take it, Telegram will process everything automatically.</string>
    <string name="SentCallOnly">We are calling your phone <![CDATA[<b>]]>%1$s<![CDATA[</b>]]> to dictate a code.</string>
    <string name="CallText">We will call you in %1$d:%2$02d</string>
    <string name="SmsText">We will send you an SMS in %1$d:%2$02d</string>
    <string name="Calling">Calling you...</string>
    <string name="Code">Code</string>
    <string name="WrongNumber">Wrong number?</string>
    <string name="DidNotGetTheCode">Didn\'t get the code?</string>
    <string name="CancelAccountReset">Cancel account reset</string>
    <string name="CancelAccountResetInfo">Somebody with access to your phone number <![CDATA[<b>]]>%1$s<![CDATA[</b>]]> has requested to delete your Telegram account and reset your 2-Step Verification password.\n\nIf this wasn\'t you, please enter the code we\'ve just sent you via SMS to your number.</string>
    <string name="ResetAccount">Reset account</string>
    <string name="ResetAccountInfo">Since the account <![CDATA[<b>]]>%1$s<![CDATA[</b>]]> is active and protected by a password, we will delete it in 1 week for security purposes.\n\nYou can cancel this process at any time.</string>
    <string name="ResetAccountStatus">You\'ll be able to reset your account in:</string>
    <string name="ResetAccountCancelledAlert">Your recent attempts to reset this account have been cancelled by its active user. Please try again in 7 days.</string>
    <string name="ResetAccountButton">RESET</string>
    <string name="CancelLinkExpired">Link is invalid or expired.</string>
    <string name="CancelLinkSuccess">The deletion process was cancelled for your account %1$s. You may close this window now.</string>
    <string name="YourName">Your name</string>
    <string name="RegisterText">Set up your first and last name</string>
    <string name="FirstName">First name (required)</string>
    <string name="LastName">Last name (optional)</string>
    <string name="CancelRegistration">Cancel registration</string>
    <string name="Settings">Settings</string>
    <string name="Contacts">Contacts</string>
    <string name="NewGroup">New Group</string>
    <string name="Yesterday">yesterday</string>
    <string name="NoResult">No results</string>
    <string name="NoChats">No chats yet...</string>
    <string name="NoChatsHelp">Start messaging by pressing the\nnew message button in the bottom right corner\nor tap the menu button for more options.</string>
    <string name="WaitingForNetwork">Waiting for network...</string>
    <string name="Connecting">Connecting...</string>
    <string name="Updating">Updating...</string>
    <string name="NewSecretChat">New Secret Chat</string>
    <string name="AwaitingEncryption">Waiting for %s to get online...</string>
    <string name="EncryptionRejected">Secret chat cancelled</string>
    <string name="EncryptionProcessing">Exchanging encryption keys...</string>
    <string name="EncryptedChatStartedOutgoing">%s joined your secret chat.</string>
    <string name="EncryptedChatStartedIncoming">You joined the secret chat.</string>
    <string name="ClearHistory">Clear history</string>
    <string name="ClearHistoryCache">Delete from cache</string>
    <string name="DeleteChat">Delete and exit</string>
    <string name="DeleteChatUser">Delete chat</string>
    <string name="HiddenName">Deleted Account</string>
    <string name="SelectChat">Select Chat</string>
    <string name="PhotoTip">Tap and hold to view</string>
    <string name="CompatibilityChat">%1$s is using an older version of Telegram, so secret photos will be shown in compatibility mode.\n\nOnce %2$s updates Telegram, photos with timers for 1 minute or less will start working in \'Tap and hold to view\' mode, and you will be notified whenever the other party takes a screenshot.</string>
    <string name="SearchMessages">MESSAGES</string>
    <string name="Search">Search</string>
    <string name="MuteNotifications">Mute notifications</string>
    <string name="MuteFor">Mute for %1$s</string>
    <string name="UnmuteNotifications">Unmute</string>
    <string name="WillUnmuteIn">In %1$s</string>
    <string name="MuteDisable">Disable</string>
    <string name="Hashtags">HASHTAGS</string>
    <string name="Recent">RECENT</string>
    <string name="ChatHints">CHATS</string>
    <string name="ChatHintsDelete">Delete %1$s from suggestions?</string>
    <string name="LinkPreview">Link preview</string>
    <string name="Draft">Draft</string>
    <string name="HistoryCleared">History was cleared</string>
    <string name="GroupType">Group Type</string>
    <string name="ChannelType">Channel Type</string>
    <string name="ChannelTypePublic">Public</string>
    <string name="ChannelTypePrivate">Private</string>
    <string name="SetAsAdmin">Promote to admin</string>
    <string name="DescriptionInfoMega">You can provide an optional description for your group.</string>
    <string name="LeaveMega">Leave Group</string>
    <string name="DeleteMega">Delete Group</string>
    <string name="LeaveMegaMenu">Leave group</string>
    <string name="DeleteMegaMenu">Delete group</string>
    <string name="MegaDeleteInfo">You will lose all messages in this group.</string>
    <string name="MegaAdminsInfo">You can add administrators to help you manage your group. Tap and hold to remove them.</string>
    <string name="MegaDeleteAlert">Wait! Deleting this group will remove all members and all messages will be lost. Delete the group anyway?</string>
    <string name="ActionCreateMega">Group created</string>
    <string name="MegaAddedBy">un1 added you to this group</string>
    <string name="MegaLeaveAlert">Are you sure you want to leave the group?</string>
    <string name="GroupUserCantAdd">Sorry, you can\'t add this user to groups.</string>
    <string name="GroupUserAddLimit">Sorry, this group is full.</string>
    <string name="GroupUserLeftError">Sorry, this user decided to leave this group, so you cannot invite them back here.</string>
    <string name="GroupUserCantAdmin">Sorry, too many administrators in this group.</string>
    <string name="GroupUserCantBot">Sorry, too many bots in this group.</string>
    <string name="ActionPinnedText">un1 pinned \"%1$s\"</string>
    <string name="ActionPinnedNoText">un1 pinned a message</string>
    <string name="ActionPinnedPhoto">un1 pinned a photo</string>
    <string name="ActionPinnedVideo">un1 pinned a video</string>
    <string name="ActionPinnedFile">un1 pinned a file</string>
    <string name="ActionPinnedSticker">un1 pinned a sticker</string>
</resources>