<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/hithere_config"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="282dp"
        android:orientation="vertical"
        android:id="@+id/scrConfig"
        android:showDividers="beginning|middle|end">

        <Switch
            android:text="@string/EnableChatHide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/swtEnable"
            android:textSize="18sp" />

        <TextView
            android:text="@string/EnterMasterPasswordMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/txtInfo1" />

        <ImageView
            android:src="@drawable/eyeclosed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imgEye"
            android:contentDescription="Show/Hide password"
            android:clickable="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txtMasterPassCode1"
            android:maxLength="4"
            android:hint="@string/EnterMasterPassword"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="numberPassword" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txtMasterPassCode2"
            android:maxLength="4"
            android:hint="@string/RepeatMasterPassword"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="numberPassword" />

        <TextView
            android:text="@string/HowChatsAutoHided"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtInfo2"
            android:maxLength="4"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="@string/EnterDefaultPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/txtInfo3" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txtDefaultPassCode1"
            android:maxLength="4"
            android:hint="@string/EnterDefaultPasswordMsg"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="numberPassword" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txtDefaultPassCode2"
            android:maxLength="4"
            android:hint="@string/RepeatDefaultPasswordMsg"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="numberPassword" />

        <TextView
            android:text="@string/DefaultNotificationTitleMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtInfo4"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/txtTitle"
            android:hint="@string/NotificationTitle"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/txtMessage"
            android:hint="@string/NotificationMessage"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <Switch
            android:text="@string/ProtectUnknownChats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/swtHideUnknown"
            android:textSize="18sp" />

        <Switch
            android:text="@string/ResetConfiguration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/swtReset"
            android:textSize="18sp"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical" />
    </LinearLayout>
</ScrollView>
